crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@array_comp.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analyze_tests/array_comp.jsonnet
---
--- source ---
[x * 2 for x in [1, 2, 3] if x > 1]
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: 0
errored: false
--- diagnostics ---
--- lir ---
ArrComp(
    LArrComp {
        value: BinaryOp {
            lhs: Local(
                LocalId(
                    0,
                ),
            ),
            op: Mul,
            rhs: Num(
                2.0,
            ),
        },
        compspecs: [
            For {
                destruct: Full(
                    LocalId(
                        0,
                    ),
                ),
                over: Arr(
                    [
                        Num(
                            1.0,
                        ),
                        Num(
                            2.0,
                        ),
                        Num(
                            3.0,
                        ),
                    ],
                ),
                loop_invariant: true,
            },
            If(
                BinaryOp {
                    lhs: Local(
                        LocalId(
                            0,
                        ),
                    ),
                    op: Gt,
                    rhs: Num(
                        1.0,
                    ),
                },
            ),
        ],
    },
)
