crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@dollar_deeply_nested.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/dollar_deeply_nested.jsonnet
---
--- source ---
{
  top: 'outer',
  a: {
    b: {
      c: $.top,
      d: self,
    },
  },
}
--- root analysis ---
object_dependent_depth: 0
local_dependent_depth: 0
errored: false
--- diagnostics ---
--- lir ---
Obj(
    StaticMembers(
        LObjStaticMembers {
            frame_shape: ClosureShape {
                captures: [],
                n_locals: 1,
            },
            this: Some(
                LocalSlot(
                    0,
                ),
            ),
            set_dollar: true,
            uses_super: false,
            locals: [],
            asserts: None,
            shape: ObjShape {
                fields: [
                    ShapeField {
                        name: "top",
                        flags: ObjFieldFlags {
                            add: false,
                            visibility: Normal,
                        },
                        location: None,
                        index: FieldIndex(
                            (),
                        ),
                    },
                    ShapeField {
                        name: "a",
                        flags: ObjFieldFlags {
                            add: false,
                            visibility: Normal,
                        },
                        location: None,
                        index: FieldIndex(
                            (),
                        ),
                    },
                ],
            },
            bindings: [
                (
                    ClosureShape {
                        captures: [],
                        n_locals: 0,
                    },
                    Trivial(
                        Str(
                            "outer",
                        ),
                    ),
                ),
                (
                    ClosureShape {
                        captures: [],
                        n_locals: 0,
                    },
                    Obj(
                        StaticMembers(
                            LObjStaticMembers {
                                frame_shape: ClosureShape {
                                    captures: [
                                        Local(
                                            LocalSlot(
                                                0,
                                            ),
                                        ),
                                    ],
                                    n_locals: 1,
                                },
                                this: None,
                                set_dollar: false,
                                uses_super: false,
                                locals: [],
                                asserts: None,
                                shape: ObjShape {
                                    fields: [
                                        ShapeField {
                                            name: "b",
                                            flags: ObjFieldFlags {
                                                add: false,
                                                visibility: Normal,
                                            },
                                            location: None,
                                            index: FieldIndex(
                                                (),
                                            ),
                                        },
                                    ],
                                },
                                bindings: [
                                    (
                                        ClosureShape {
                                            captures: [
                                                Capture(
                                                    CaptureSlot(
                                                        0,
                                                    ),
                                                ),
                                            ],
                                            n_locals: 0,
                                        },
                                        Obj(
                                            StaticMembers(
                                                LObjStaticMembers {
                                                    frame_shape: ClosureShape {
                                                        captures: [
                                                            Capture(
                                                                CaptureSlot(
                                                                    0,
                                                                ),
                                                            ),
                                                        ],
                                                        n_locals: 1,
                                                    },
                                                    this: Some(
                                                        LocalSlot(
                                                            0,
                                                        ),
                                                    ),
                                                    set_dollar: false,
                                                    uses_super: false,
                                                    locals: [],
                                                    asserts: None,
                                                    shape: ObjShape {
                                                        fields: [
                                                            ShapeField {
                                                                name: "c",
                                                                flags: ObjFieldFlags {
                                                                    add: false,
                                                                    visibility: Normal,
                                                                },
                                                                location: None,
                                                                index: FieldIndex(
                                                                    (),
                                                                ),
                                                            },
                                                            ShapeField {
                                                                name: "d",
                                                                flags: ObjFieldFlags {
                                                                    add: false,
                                                                    visibility: Normal,
                                                                },
                                                                location: None,
                                                                index: FieldIndex(
                                                                    (),
                                                                ),
                                                            },
                                                        ],
                                                    },
                                                    bindings: [
                                                        (
                                                            ClosureShape {
                                                                captures: [
                                                                    Capture(
                                                                        CaptureSlot(
                                                                            0,
                                                                        ),
                                                                    ),
                                                                ],
                                                                n_locals: 0,
                                                            },
                                                            Index {
                                                                indexable: Slot(
                                                                    Capture(
                                                                        CaptureSlot(
                                                                            0,
                                                                        ),
                                                                    ),
                                                                ),
                                                                parts: [
                                                                    LIndexPart {
                                                                        span: virtual:<test>:45-48,
                                                                        value: Trivial(
                                                                            Str(
                                                                                "top",
                                                                            ),
                                                                        ),
                                                                    },
                                                                ],
                                                            },
                                                        ),
                                                        (
                                                            ClosureShape {
                                                                captures: [],
                                                                n_locals: 0,
                                                            },
                                                            Slot(
                                                                Local(
                                                                    LocalSlot(
                                                                        0,
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                },
                                            ),
                                        ),
                                    ),
                                ],
                            },
                        ),
                    ),
                ),
            ],
        },
    ),
)
