crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@dollar_outside_object.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
assertion_line: 2175
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/dollar_outside_object.jsonnet
---
--- source ---
$.a
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: none
errored: true
--- diagnostics ---
   · ╭── `$` used outside of object
1  │ $.a 
2  │  
--- lir ---
Index {
    indexable: BadLocal(
        "$",
    ),
    parts: [
        LIndexPart {
            span: virtual:<test>:2-3,
            value: Trivial(
                Str(
                    "a",
                ),
            ),
        },
    ],
}
