crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@hoistable_local.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analyze_tests/hoistable_local.jsonnet
---
--- source ---
local outer = 1; local inner = 10 + 20; outer + inner
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: 0
errored: false
--- diagnostics ---
   ·                        ╭────── local could be hoisted to an outer scope: inner
1  │ local outer = 1; local inner = 10 + 20; outer + inner 
2  │  
--- lir ---
LocalExpr {
    binds: [
        LBind {
            destruct: Full(
                LocalId(
                    0,
                ),
            ),
            value: Num(
                1.0,
            ),
        },
    ],
    body: LocalExpr {
        binds: [
            LBind {
                destruct: Full(
                    LocalId(
                        1,
                    ),
                ),
                value: BinaryOp {
                    lhs: Num(
                        10.0,
                    ),
                    op: Add,
                    rhs: Num(
                        20.0,
                    ),
                },
            },
        ],
        body: BinaryOp {
            lhs: Local(
                LocalId(
                    0,
                ),
            ),
            op: Add,
            rhs: Local(
                LocalId(
                    1,
                ),
            ),
        },
    },
}
