crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@ifelse.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
assertion_line: 2175
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/ifelse.jsonnet
---
--- source ---
if true then 1 else 2
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: none
errored: false
--- diagnostics ---
--- lir ---
IfElse {
    cond: Trivial(
        Bool(
            true,
        ),
    ),
    cond_then: Trivial(
        Num(
            1.0,
        ),
    ),
    cond_else: Some(
        Trivial(
            Num(
                2.0,
            ),
        ),
    ),
}
