crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@nested_object_independent.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/nested_object_independent.jsonnet
---
--- source ---
{
  a: 1,
  b: {
    c: 2, d: self.c
  },
}
--- root analysis ---
object_dependent_depth: 1
local_dependent_depth: 1
errored: false
--- diagnostics ---
--- lir ---
Obj(
    StaticMembers(
        LObjStaticMembers {
            frame_shape: ClosureShape {
                captures: [],
                n_locals: 1,
            },
            this: None,
            set_dollar: false,
            uses_super: false,
            locals: [],
            asserts: None,
            shape: ObjShape {
                fields: [
                    ShapeField {
                        name: "a",
                        flags: ObjFieldFlags {
                            add: false,
                            visibility: Normal,
                        },
                        location: None,
                        index: FieldIndex(
                            (),
                        ),
                    },
                    ShapeField {
                        name: "b",
                        flags: ObjFieldFlags {
                            add: false,
                            visibility: Normal,
                        },
                        location: None,
                        index: FieldIndex(
                            (),
                        ),
                    },
                ],
            },
            bindings: [
                (
                    ClosureShape {
                        captures: [],
                        n_locals: 0,
                    },
                    Trivial(
                        Num(
                            1.0,
                        ),
                    ),
                ),
                (
                    ClosureShape {
                        captures: [],
                        n_locals: 0,
                    },
                    Obj(
                        StaticMembers(
                            LObjStaticMembers {
                                frame_shape: ClosureShape {
                                    captures: [],
                                    n_locals: 1,
                                },
                                this: Some(
                                    LocalSlot(
                                        0,
                                    ),
                                ),
                                set_dollar: false,
                                uses_super: false,
                                locals: [],
                                asserts: None,
                                shape: ObjShape {
                                    fields: [
                                        ShapeField {
                                            name: "c",
                                            flags: ObjFieldFlags {
                                                add: false,
                                                visibility: Normal,
                                            },
                                            location: None,
                                            index: FieldIndex(
                                                (),
                                            ),
                                        },
                                        ShapeField {
                                            name: "d",
                                            flags: ObjFieldFlags {
                                                add: false,
                                                visibility: Normal,
                                            },
                                            location: None,
                                            index: FieldIndex(
                                                (),
                                            ),
                                        },
                                    ],
                                },
                                bindings: [
                                    (
                                        ClosureShape {
                                            captures: [],
                                            n_locals: 0,
                                        },
                                        Trivial(
                                            Num(
                                                2.0,
                                            ),
                                        ),
                                    ),
                                    (
                                        ClosureShape {
                                            captures: [],
                                            n_locals: 0,
                                        },
                                        Index {
                                            indexable: Slot(
                                                Local(
                                                    LocalSlot(
                                                        0,
                                                    ),
                                                ),
                                            ),
                                            parts: [
                                                LIndexPart {
                                                    span: virtual:<test>:35-36,
                                                    value: Trivial(
                                                        Str(
                                                            "c",
                                                        ),
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                ],
                            },
                        ),
                    ),
                ),
            ],
        },
    ),
)
